--- a/src/content/post/20210806_tor_socks5.md
+++ b/src/content/post/20210806_tor_socks5.md
@@ -1,7 +1,7 @@
 ---
 title: "Create tor socks5 proxy on your local network"
 description: "This guide will show you how to create a tor proxy on your private local network, enabling anonymous browsing."
-publishDate: "Aug 2021"
+publishDate: "6 Aug 2021"
 tags: ["networking", "proxy", "tor"]
 link: "https://medium.com/@herman.daniel/create-tor-sock5-proxy-on-your-local-network-b85d43f96d7b?source=friends_link&sk=db2b2f70490af5cd0375c8539992269d"
 ---
