--- a/src/content/post/20231025_polars.md
+++ b/src/content/post/20231025_polars.md
@@ -1,7 +1,7 @@
 ---
 title: "Use polars, not pandas"
 description: "For those who are not familiar, polars is package like pandas, but faster, better and written in rust."
-publishDate: "Oct 2023"
+publishDate: "25 Oct 2023"
 tags: ["data processing", "polars", "rust"]
 link: "https://medium.com/@herman.daniel/use-polars-not-pandas-07f33dddec6d?source=friends_link&sk=9874c6d76df641c99924f240c17defd4"
 ---
